Fix linkedin url overflow

--- a/src/App.css
+++ b/src/App.css
@@ -152,3 +152,7 @@ span {
     border-radius: 10px;
   }
 }
+
+.linkedin{
+  font-size: 0.6rem;
+}
